--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "enmap": "^2.6.3",
     "enmap-level": "^2.1.0",
     "heroku-logger": "^0.3.1",
-    "mongoose": "^5.1.6"
+    "mongoose": "^5.1.6",
+    "request": "^2.87.0"
   }
 }
