--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Monbrey/urpg-discord#readme",
   "dependencies": {
+    "bufferutil": "^4.0.0",
     "discord.js": "^11.3.2",
     "enmap": "^2.6.3",
     "enmap-level": "^2.1.0",
